--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="./css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -179,6 +180,117 @@
     </div>
   </section>
 
+  <section class="portfolio">
+    <div class="container">
+      <div class="portfolio__top">
+        <h2 class="title">Portfolio</h2>
+        <div class="portfolio__filter-btn">
+          <button class="portfolio__btn" data-filter="all">ALL</button>
+          <button class="portfolio__btn" data-filter=".category-a">BRANDING</button>
+          <button class="portfolio__btn" data-filter=".category-b">DESIGN</button>
+          <button class="portfolio__btn" data-filter=".category-c">PHOTOGRAPHY</button>
+          <button class="portfolio__btn" data-filter=".category-d">ILLUSTRATION</button>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio__content">
+      <div class="portfolio__item mix category-a">
+        <img src="images/portfolio/1.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-a">
+        <img src="images/portfolio/2.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-b">
+        <img src="images/portfolio/3.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-b">
+        <img src="images/portfolio/4.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-b">
+        <img src="images/portfolio/5.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-c">
+        <img src="images/portfolio/6.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-c">
+        <img src="images/portfolio/7.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-c">
+        <img src="images/portfolio/8.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+      <div class="portfolio__item mix category-d">
+        <img src="images/portfolio/9.jpg" alt="portfolio images">
+        <a href="#" class="portfolio__item-link">
+          Show project
+        </a>
+      </div>
+    </div>
+
+    <a class="portfolio__add" href="#">
+      VIEW MORE PROJECTS
+    </a>
+    
+    <blockquote class="blockquote">
+      «Неважно какую историю вы рассказываете, главное – сделайте своего покупателя героем»
+      <span class="blockquote__author">Крис Броган</span>
+    </blockquote>
+
+    <div class="portfolio__video">
+      <a data-fancybox class="portfolio__video-link" href="https://www.youtube.com/watch?v=Gx25RShzV6E">
+        <img src="images/play.svg" alt="play icon">
+      </a>
+    </div>
+
+    <div class="container">
+      <div class="portfolio__numbers">
+        <h5 class="portfolio__numbers-item">
+          305
+          <span>Web Designs</span>
+        </h5>
+        <h5 class="portfolio__numbers-item">
+          220
+          <span>Logo Designs</span>
+        </h5>
+        <h5 class="portfolio__numbers-item">
+          52
+          <span>Print Designs</span>
+        </h5>
+        <h5 class="portfolio__numbers-item">
+          88
+          <span>Mobile Apps</span>
+        </h5>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/mixitup.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
