--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap"
     rel="stylesheet">
     <link rel="stylesheet" href="./css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="./css/slick.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -287,9 +288,84 @@
     </div>
   </section>
 
+  <section class="slider-blog">
+    <div class="container">
+      <div class="slider-blog__inner">
+        
+        <div class="slider-blog__item">
+          <a  class="slider-blog__item-link" href="#">
+            <h3 class="slider-blog__item-title">
+              АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            </h3>
+          </a>
+          <p class="slider-blog__item-desc">
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+          </p>
+        </div>
+        <div class="slider-blog__item">
+          <a class="slider-blog__item-link" href="#">
+            <h3 class="slider-blog__item-title">
+              АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            </h3>
+          </a>
+          <p class="slider-blog__item-desc">
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+          </p>
+        </div>
+        <div class="slider-blog__item">
+          <a class="slider-blog__item-link" href="#">
+            <h3 class="slider-blog__item-title">
+              АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            </h3>
+          </a>
+          <p class="slider-blog__item-desc">
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+          </p>
+        </div>
+        <div class="slider-blog__item">
+          <a class="slider-blog__item-link" href="#">
+            <h3 class="slider-blog__item-title">
+              АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            </h3>
+          </a>
+          <p class="slider-blog__item-desc">
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+          </p>
+        </div>
+        <div class="slider-blog__item">
+          <a class="slider-blog__item-link" href="#">
+            <h3 class="slider-blog__item-title">
+              АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            </h3>
+          </a>
+          <p class="slider-blog__item-desc">
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+          </p>
+        </div>
+        <div class="slider-blog__item">
+          <a class="slider-blog__item-link" href="#">
+            <h3 class="slider-blog__item-title">
+              АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
+            </h3>
+          </a>
+          <p class="slider-blog__item-desc">
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+          </p>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/mixitup.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
