adding team section

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@500;700&family=Open+Sans:wght@300;400&family=Raleway:wght@700&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="./css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="./css/slick.css">
+  <link rel="stylesheet" href="./css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="./css/slick.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -83,13 +83,18 @@
         <h2 class="title about__title">About Us</h2>
         <div class="about__text">
           <p>
-            Практика показывает, что большие продажи далеко не всегда зависят от того, сколько вы потратите на продвижение сайта и
-            рекламную кампанию. Значительно сильнее конечный результат зависит от правильной организации кампании. Мы достигаем
-            максимальной эффективности и помогаем сберечь бюджеты наших клиентов, используя стратегический интернет-маркетинг.
+            Практика показывает, что большие продажи далеко не всегда зависят от того, сколько вы потратите на
+            продвижение сайта и
+            рекламную кампанию. Значительно сильнее конечный результат зависит от правильной организации кампании. Мы
+            достигаем
+            максимальной эффективности и помогаем сберечь бюджеты наших клиентов, используя стратегический
+            интернет-маркетинг.
           </p>
           <p>
-            Определяем цели продвижения — что наш клиент хочет получить, когда работа будет сделана. Проводим маркетинговые
-            исследования рынка, целевой аудитории, конкурентной среды. При разработке стратегии учитываем все имеющиеся данные.
+            Определяем цели продвижения — что наш клиент хочет получить, когда работа будет сделана. Проводим
+            маркетинговые
+            исследования рынка, целевой аудитории, конкурентной среды. При разработке стратегии учитываем все имеющиеся
+            данные.
           </p>
         </div>
       </div>
@@ -102,22 +107,24 @@
       <div class="expertise__inner">
         <div class="expertise__info">
           <div class="expertise__info-item">BRANDING
-          <span style="width: calc(100% - 90%)">90%</span>
+            <span style="width: calc(100% - 90%)">90%</span>
           </div>
           <div class="expertise__info-item">DESIGN
-          <span style="width: calc(100% - 80%)">80%</span>
+            <span style="width: calc(100% - 80%)">80%</span>
           </div>
           <div class="expertise__info-item">DEVELOPMENT
-          <span style="width: calc(100% - 85%)">85%</span>
+            <span style="width: calc(100% - 85%)">85%</span>
           </div>
         </div>
         <div class="expertise__text">
           <p>
-            В стратегию интернет-маркетинга входит создание имиджевой и рекламной концепции, разработка контент-стратегии,
+            В стратегию интернет-маркетинга входит создание имиджевой и рекламной концепции, разработка
+            контент-стратегии,
             распределение использования различных каналов коммуникации.
           </p>
           <p>
-            Реализуем принятую стратегию, отслеживая промежуточные результаты, и корректируя будущие действия с учетом изменений.
+            Реализуем принятую стратегию, отслеживая промежуточные результаты, и корректируя будущие действия с учетом
+            изменений.
             Главной целью в этом процессе для нас является конечный результат, а не следование планам.
           </p>
         </div>
@@ -129,7 +136,8 @@
             GRAPHIC DESIGN
           </h4>
           <p class="expertise__item-text">
-            Рекламный дизайн, дизайн упаковки, этикетки, листовок, каталогов, разработка презентаций, дизайн выставочных стендов
+            Рекламный дизайн, дизайн упаковки, этикетки, листовок, каталогов, разработка презентаций, дизайн выставочных
+            стендов
           </p>
         </div>
 
@@ -164,13 +172,17 @@
         </h2>
         <div class="magic__text">
           <p>
-            Маркетинговое агентство MGN: полный комплекс маркетинговых, рекламных и дизайнерских услуг в Харькове и Украине:
-            маркетинговые исследования рынков, товаров, потребителей, планирование комплекса маркетинга, реклама, проведение
+            Маркетинговое агентство MGN: полный комплекс маркетинговых, рекламных и дизайнерских услуг в Харькове и
+            Украине:
+            маркетинговые исследования рынков, товаров, потребителей, планирование комплекса маркетинга, реклама,
+            проведение
             рекламных кампаний, брендинг, рекламный дизайн, pr.
           </p>
           <p>
-            Нами накоплен немалый опыт работы в реальном бизнесе, в самых различных отраслях – от недвижимости до аптечного и
-            медицинского бизнеса. Мы не просто беремся решать задачи наших клиентов, мы сами вышли из бизнес-среды и понимаем суть
+            Нами накоплен немалый опыт работы в реальном бизнесе, в самых различных отраслях – от недвижимости до
+            аптечного и
+            медицинского бизнеса. Мы не просто беремся решать задачи наших клиентов, мы сами вышли из бизнес-среды и
+            понимаем суть
             бизнес-процессов.
           </p>
           <p>
@@ -254,7 +266,7 @@
     <a class="portfolio__add" href="#">
       VIEW MORE PROJECTS
     </a>
-    
+
     <blockquote class="blockquote">
       «Неважно какую историю вы рассказываете, главное – сделайте своего покупателя героем»
       <span class="blockquote__author">Крис Броган</span>
@@ -291,15 +303,16 @@
   <section class="slider-blog">
     <div class="container">
       <div class="slider-blog__inner">
-        
+
         <div class="slider-blog__item">
-          <a  class="slider-blog__item-link" href="#">
+          <a class="slider-blog__item-link" href="#">
             <h3 class="slider-blog__item-title">
               АНИМИРОВАННЫЙ ЛОГОТИП – ТРЕНД ИЛИ НЕОБХОДИМОСТЬ?
             </h3>
           </a>
           <p class="slider-blog__item-desc">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+            обсудим.
           </p>
         </div>
         <div class="slider-blog__item">
@@ -309,7 +322,8 @@
             </h3>
           </a>
           <p class="slider-blog__item-desc">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+            обсудим.
           </p>
         </div>
         <div class="slider-blog__item">
@@ -319,7 +333,8 @@
             </h3>
           </a>
           <p class="slider-blog__item-desc">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+            обсудим.
           </p>
         </div>
         <div class="slider-blog__item">
@@ -329,7 +344,8 @@
             </h3>
           </a>
           <p class="slider-blog__item-desc">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+            обсудим.
           </p>
         </div>
         <div class="slider-blog__item">
@@ -339,7 +355,8 @@
             </h3>
           </a>
           <p class="slider-blog__item-desc">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+            обсудим.
           </p>
         </div>
         <div class="slider-blog__item">
@@ -349,7 +366,8 @@
             </h3>
           </a>
           <p class="slider-blog__item-desc">
-            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте обсудим.
+            Что представляет собой анимированный логотип, и в чем его преимущества? И почему сейчас это модно? Давайте
+            обсудим.
           </p>
         </div>
 
@@ -358,6 +376,46 @@
   </section>
 
 
+  <section class="team">
+    <div class="container">
+      <h2 class="title team-title">
+        Our Team
+      </h2>
+      <div class="team__items">
+        <div class="team__item">
+          <img src="images/team/team-1.jpg" alt="макс">
+          <h6 class="team__name">
+            Макс
+          </h6>
+          <p class="team__position">
+            CEO
+          </p>
+        </div>
+
+        <div class="team__item">
+          <img src="images/team/team-2.jpg" alt="аня">
+          <h6 class="team__name">
+            Аня
+          </h6>
+          <p class="team__position">
+            Co-Founder
+          </p>
+        </div>
+
+        <div class="team__item">
+          <img src="images/team/team-3.jpg" alt="мила">
+          <h6 class="team__name">
+            Мила
+          </h6>
+          <p class="team__position">
+            Designer
+          </p>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
 
 
 
