clients and contact sections

--- a/index.html
+++ b/index.html
@@ -458,6 +458,35 @@
     </div>
   </section>
 
+  <div class="clients">
+    <div class="container">
+      <ul class="clients__list">
+        <li><img src="images/clients/1.png" alt="intertop"></li>
+        <li><img src="images/clients/2.png" alt="vizor"></li>
+        <li><img src="images/clients/3.png" alt="planeta kino"></li>
+        <li><img src="images/clients/4.png" alt="uklon"></li>
+        <li><img src="images/clients/5.png" alt="citrus"></li>
+      </ul>
+    </div>
+  </div>
+
+  <section class="contact">
+    <div class="container">
+      <h2 class="title contact__title">
+        Get in touch
+      </h2>
+      <form action="" class="form">
+        <input type="text" placeholder="ИМЯ">
+        <input type="text" placeholder="EMAIL">
+        <textarea placeholder="ВАШЕ СООБЩЕНИЕ"></textarea>
+        <button type="submit">ОТПРАВИТЬ</button>
+      </form>
+    </div>
+  </section>
+
+
+  
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/mixitup.min.js"></script>
