--- a/index.html
+++ b/index.html
@@ -485,7 +485,44 @@
   </section>
 
 
-  
+<footer class="footer">
+  <div class="footer__top">
+    <a class="footer__logo" href="#">
+      <img src="images/logo-white.svg" alt="logo">
+    </a>
+    <ul class="footer__social">
+      <li class="footer__social-list">
+        <a href="#" class="footer__social-link">Facebook</a>
+      </li>
+      <li class="footer__social-list">
+        <a href="#" class="footer__social-link">Twitter</a>
+      </li>
+      <li class="footer__social-list">
+        <a href="#" class="footer__social-link">Google+</a>
+      </li>
+      <li class="footer__social-list">
+        <a href="#" class="footer__social-link">Behance</a>
+      </li>
+      <li class="footer__social-list">
+        <a href="#" class="footer__social-link">Dribble</a>
+      </li>
+      <li class="footer__social-list">
+        <a href="#" class="footer__social-link">Instagram</a>
+      </li>
+    </ul>
+    <div class="footer__contact">
+      <address class="address">Украина, Харьков ул. Тобольская, 63</address>
+      <a class="phone" href="tel:+3806765252222">(38067) 65 252 222</a>
+      <a class="email" href="mailto:info@mail.com">info@mail.com</a>
+    </div>
+    <a href="#" class="go-top">
+      <img src="images/angle-up.svg" alt="arrow top">
+    </a>
+  </div>
+  <div class="footer__copy">
+    <p>@2020 O...Marketing</p>
+  </div>
+</footer>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
