--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
   </header>
 
-  <!-- <section class="about">
+  <section class="about">
     <div class="container">
       <div class="about__inner">
         <h2 class="title about__title">About Us</h2>
@@ -207,7 +207,7 @@
     </div>
   </section>
 
-  <section class="portfolio">
+  <!-- <section class="portfolio">
     <div class="container">
       <div class="portfolio__top">
         <h2 class="title">Portfolio</h2>
